@@ -1,3 +1,7 @@
+2006-05-15  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/prefs.c (update_binding): plug a small leak.
+
 2006-05-01  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* configure.in: Put ALL_LINGUAS on one line to fix the
